
 * Updated all the codes to reduce the dependency to other packages, especially
   to oyAuxiliaryFunctions.

 * timeUnit values are now stored as int instead of strings in
   :class:`~oyProjectManager.models.repository.Repository`

 * replaced the internal caching system with Beaker.

 * moved the class methods of the RangeTools to
   :module:`~oyProjectManager.utils`

v11.4.9
-------

 * from now on the OYPROJECTMANAGER_PATH is mandatory. Without the variable
   the system will not work.

v11.4.7
-------

 * :class:`~oyProjectManager.models.abstractClasses.Environment` now raises
   notImplemented errors for the methods which are not implemented by the child
   class.

 * :attr:`~oyProjectManager.models.repository.Repository._env_key` is renamed
   to
   :attr:`~oyProjectManager.models.repository.Repository.settings_path_env_key`

 * The environment key "OYPROJECTMANAGER_SETTINGS_PATH" is renamed to
   "OYPROJECTMANAGER_PATH" to keep things simple and reasonable.

v11.4.5
-------

 * added relpath to the :module:`oyProjectManager.utils` module, which turns
   paths to relative paths to each other

 * the render file path in maya is now calculated relatively to the path
   queried from the workspace image file rule path

 * file paths in nuke are now replaced with a tcl code reading the environment
   variable

 * in nuke, an output node called "MAIN_OUTPUT" is created whenever the script
   is saved, and its path is set to the correct path pointed by the current
   asset.

v11.4.4
-------

 * Now, the environment variable is set whenever the repository settings is
   read. This eliminates the need of setting the STALKER_REPOSITORY_PATH
   environment variable manually.

v11.4.3
-------

 * finished moving the oyProjectManager to its own mercurial repository (thanks
   to the hg convert tool)

 * converted the project layout to a more common Python package structure
   suitable for PyPI

 * trying to use the forward slashes all over the system internaly
