@@ -15,18 +15,11 @@ TODO
  * Referencing an asset should set the STALKER_REPOSITORY_PATH environment
    variable in the asset path.
 
- * the creation of the workspace.mel should be handled by the mayaEnv module
-   instead of the project class. There could be some initialization part
-   for all the environment classes.
-
 
 
  * exports to formats other than the native format of the environment should
-   be placed under a folder, lets say a folder named "_exports_" under the
-   asset folder
-
- * set the default maya renderer to mentralray and use 32-bit exr as the
-   default output type
+   be placed under a folder, lets say a folder named "exports" under the
+   asset folder.
 
  * save a local copy of the asset to not to carry all the eggs in the same
    basket
@@ -88,6 +81,9 @@ TODO
 
 FIXED & DONE
 ============
+
+ * set the default maya renderer to mentralray and use 16-bit exr as the
+   default output type
 
  * for houdini set the render output picture path and name if there is an
    output node, if there is no output node, by default create one
